# custom-courses

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
custom-courses-ui/: README.md  package-lock.json  package.json  quasar.config.js
custom-courses-ui/src/layouts/: AuthLayout.vue  MainLayout.vue
custom-courses-ui/src/pages/: CreateCoursePage.vue  DashboardPage.vue  LoginPage.vue  PublicCoursesPage.vue  RegisterPage.vue  SettingsPage.vue  UserSettingPage.vue
custom-courses-ui/src/router/: routes.ts
custom_courses/: auth.py  database.py  main.py  models.py  utils.py
custom_courses/models/: course.py  user.py
custom_courses/routes/: course.py  user.py
src/: main.py
udemy_lite/: database.py  main.py  models.py  schema.py  test.py
udemy_lite/models/: course.py  user.py
udemy_lite/routes/: course.py  user.py
