[tool.poetry]
name = "udemy-lite"
version = "0.1.0"
description = "a simple version of the famous public platform udemy designed for courses"
authors = ["abdelrahman khattab <abdelrahmankhattab9999@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest-fastapi = "^0.1.0"
fastapi = "^0.111.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
