[tool.poetry]
name = "custom-courses"
version = "0.1.0"
description = "a website that allow users to create and share educational Courses ,these courses are a collection of free structured organized contents books ,pdfs ,vids ,images ,summary ... "
authors = ["abdelrahman khattab <abdelrahmankhattab9999@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest-fastapi = "^0.1.0"
fastapi = "^0.111.1"
sqlmodel = "^0.0.21"
pydantic = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
custom_courses = "custom_courses.main:main_app"